# TrustRAG

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_JA.md  README_TW.md  README_ZH.md
.github/workflows/: ci.yml  desktop-build.yml  docs.yml  release.yml  test-build.yml
.notes/: 01-prd-analysis.md  02-vs-openwebui.md  03-tech-decisions.md  04-mvp-tasks.md  05-ui-strategy.md  06-reusable-sdks.md  07-component-sdk-map.md  08-ui-design-style.md
apps/client/: pubspec.yaml
apps/client/android/: .gitignore
apps/client/android/app/: build.gradle.kts
apps/client/ios/Runner/: Info.plist
apps/client/ios/Runner.xcodeproj/: project.pbxproj
apps/client/lib/: main.dart
apps/client/lib/core/api/: api_client.dart
apps/client/lib/core/providers/: dev_mode_provider.dart
apps/client/lib/core/router/: app_router.dart
apps/client/linux/: CMakeLists.txt
apps/client/linux/runner/: my_application.cc
apps/client/macos/Runner.xcodeproj/: project.pbxproj
apps/client/test/: widget_test.dart
apps/client/windows/: CMakeLists.txt  installer.iss
apps/client/windows/runner/: Runner.rc  main.cpp
backend/: Cargo.toml  Dockerfile  build.rs
backend/migrations/: 0001_init_schema.sql  0002_perf_indexes.sql  0003_knowledge_graph.sql  0004_workspace_members.sql  0005_fix_embedding_provider_check.sql  0006_fix_workspace_members_schema.sql
backend/migrations_sqlite/: init.sql
backend/src/: config.rs  error.rs  main.rs  metrics.rs
backend/src/api/: chat.rs  citations.rs  documents.rs  embedding_configs.rs  knowledge_graph.rs  mod.rs  models.rs  reviews.rs  search.rs  users.rs  workspace_members.rs  workspaces.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/db/: compat.rs  mod.rs  models.rs  pg.rs  sqlite.rs
backend/src/services/: chunking.rs  citation.rs  document.rs  embedding.rs  llm.rs  local_doc_processor.rs  mod.rs  provider_registry.rs  rag.rs  reranker.rs  review.rs  search.rs  storage.rs
backend/src/traits/: document_parser.rs  embedding_provider.rs  llm_provider.rs  mod.rs
backend/src/workers/: mod.rs
doc-processor/: Dockerfile  requirements.txt
doc-processor/app/: main.py  models.py
doc-processor/app/processors/: docx.py  pdf.py  position_mapper.py
doc-processor/app/routers/: convert.py  ocr.py  parse.py
doc-processor/tests/: test_docx_parser.py  test_pdf_parser.py  test_position_mapper.py
docs/: api-design.md  dev-roadmap-v2.md  dev-todolist.md  index.md  package-lock.json  package.json  prd-original.md  rag-pipeline.md  tech-stack.md
docs/.vitepress/: config.mts
docs/api/: authentication.md  chat.md  citations.md  documents.md  overview.md  workspaces.md
docs/architecture/: citations.md  dual-database.md  overview.md  rag-pipeline.md
docs/development/: build.md  setup.md  structure.md
docs/guide/: citations.md  desktop-mode.md  getting-started.md  rag-chat.md  server-mode.md  what-is-trustrag.md
docs/zh/: index.md
docs/zh/api/: authentication.md  chat.md  citations.md  documents.md  overview.md  workspaces.md
docs/zh/architecture/: citations.md  dual-database.md  overview.md  rag-pipeline.md
docs/zh/development/: build.md  setup.md  structure.md
docs/zh/guide/: citations.md  desktop-mode.md  getting-started.md  rag-chat.md  server-mode.md  what-is-trustrag.md
infra/: docker-compose.dev.yml  docker-compose.yml
infra/caddy/: Caddyfile
infra/postgres/: init.sql
infra/scripts/: logs.sh
scripts/: generate-release-notes.mjs
(+23 files in other folders)
