[package]
name = "trustrag-backend"
version = "0.1.0"
edition = "2021"
description = "TrustRAG - Trustworthy RAG Knowledge Workbench Backend"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
async-openai = "0.26"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
hex = "0.4"
futures-util = "0.3"
opendal = { version = "0.51", features = ["services-s3"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
text-splitter = { version = "0.18", features = ["markdown"] }
sha2 = "0.10"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
